--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -933,7 +933,7 @@
            class="nav-item {% if request.endpoint and 'accounts' in request.endpoint %}active{% endif %}"
            onclick="return BaseApp.checkGuestAccess(event, this)">
             <i class="ph ph-user-gear"></i>
-            <span>Account Settings</span>
+            <span>Social Accounts</span>
         </a>
 
         <a href="{{ url_for('payment.index') }}"
